  (Dale Anson)

- Fix for tracker 846913, jsp syntax highlighting for single line comments.
  (Dale Anson)
  
- Updated css mode with new css 3 properties and values, tracker 3483390.
  (Dale Anson)
  
- Updated html mode to recognize new html 5 keywords, updated jsp mode to
  delegate to html mode for html tags. (Dale Anson)

}}}
{{{ UI

- jEdit now supports localization. (Matthieu Casanova)

- Added complete french translation (Jojaba http://jojaba.free.fr)

- Added complete german translation (Robert Schwenn)

- Text Area option for Search System Fonts in Font substitution
  (#3479585 - Max Funk)

- Dialog titles in file system browser (SPennington - #2968930, #2807301)

- Standarized Buffer Switcher combo (Jarek Czekalski - #3456572, #3408584)

- If a Task is not cancellable, the cancel button of TaskMonitor is disabled
  (Matthieu Casanova)

- Added Icons to the VFS Browser context menu (Matthieu Casanova)

- Combined Global and Plugin options into a single pane, making Optional plugin
	obsolete, fixing auto resize dialog issue. (Alan Ezust - #3455602, #3449498)
	
- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using OS X
  and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

- New option in Saving and Backup pane: Use File System Browser dir for
  Save-As (# 1591441 - Alan Ezust)

- RegisterViewer: set initial focus to registerList, added key bindings for
  inserting content, clearing a register and leaving the registerList
  (#3437779 - Martin Raspe)

}}}